Fixed layout shift on customer registration page

--- a/web/css/base/_form.less
+++ b/web/css/base/_form.less
@@ -76,6 +76,8 @@ input[type='button'] {
     .nested > .field,
     button + .field,
     .field + .fieldset,
+    .field + script + .field,
+    .field + script + script + .field,
     .field + .field {
         margin-top: @3;
     }
